crates/layout/tests/snapshots/glyph_run_snapshots__snapshot_glyphs_for_hello_world.snap
---
source: crates/layout/tests/glyph_run_snapshots.rs
assertion_line: 55
expression: summarize(&plan)
---
run_count: 1
runs:
  - block_index: 0
    line_index: 0
    font_size_px_round: 14
    glyph_count: 11
    glyph_ids:
      - 75
      - 72
      - 79
      - 79
      - 82
      - 3
      - 90
      - 82
      - 85
      - 79
      - 71
    cluster_starts:
      - 0
      - 1
      - 2
      - 3
      - 4
      - 5
      - 6
      - 7
      - 8
      - 9
      - 10
    x_px_round:
      - 0
      - 9
      - 17
      - 21
      - 25
      - 34
      - 38
      - 50
      - 58
      - 64
      - 68
    width_px_round:
      - 9
      - 9
      - 4
      - 4
      - 9
      - 4
      - 11
      - 9
      - 6
      - 4
      - 9
