crates/layout/tests/snapshots/glyph_run_snapshots__snapshot_glyphs_for_latam_diacritics.snap
---
source: crates/layout/tests/glyph_run_snapshots.rs
assertion_line: 78
expression: summarize(&plan)
---
run_count: 1
runs:
  - block_index: 0
    line_index: 0
    font_size_px_round: 14
    glyph_count: 10
    glyph_ids:
      - 36
      - 179
      - 82
      - 3
      - 70
      - 163
      - 79
      - 76
      - 71
      - 82
    cluster_starts:
      - 0
      - 1
      - 2
      - 3
      - 4
      - 5
      - 6
      - 7
      - 8
      - 9
    x_px_round:
      - 0
      - 10
      - 18
      - 27
      - 31
      - 39
      - 48
      - 52
      - 56
      - 64
    width_px_round:
      - 10
      - 9
      - 9
      - 4
      - 8
      - 9
      - 4
      - 4
      - 9
      - 9
